@@ -1,3 +1,9 @@
+2009-06-01  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	* subtitleeditor.pot:
+	Update.
+
 2009-04-22  kitone  <kitone@gna.org>
 
 	* subtitleeditor.pot:
